--- a/public/assets/css/bootsnav.css
+++ b/public/assets/css/bootsnav.css
@@ -65,10 +65,15 @@ nav.navbar.bootsnav ul.nav li.active > a{
 }
 
 nav.navbar.bootsnav .navbar-toggle{
-    background-color: #fff !important;
+    /* background-color: #fff !important;
     border: none;
     padding: 0;
     font-size: 18px;
+    position: relative;
+    top: 5px; */
+        padding: 9px;
+    color: white;
+    font-size: 25px;
     position: relative;
     top: 5px;
 }
@@ -505,13 +510,13 @@ nav.navbar.bootsnav ul.nav > li > a{
 
 @media (max-width: 991px) {
     /* Navbar Responsive
-    =================================*/ 
+    =================================*/
     nav.navbar.bootsnav .navbar-brand    {
         display: inline-block;
         float: none !important;
         margin: 0 !important;
     }
-    
+
     nav.navbar.bootsnav .navbar-header {
         float: none;
         display: block;
@@ -519,43 +524,43 @@ nav.navbar.bootsnav ul.nav > li > a{
         padding-left: 30px;
         padding-right: 30px;
     }
-    
+
     nav.navbar.bootsnav .navbar-toggle {
         display: inline-block;
         float: left;
         margin-right: -200px;
         margin-top: 10px;
     }
-    
+
     nav.navbar.bootsnav .navbar-collapse {
-        border: none;   
+        border: none;
         margin-bottom: 0;
     }
-    
+
     nav.navbar.bootsnav.no-full .navbar-collapse{
         max-height: 350px;
     }
-    
+
     nav.navbar.bootsnav .navbar-collapse.collapse {
         display: none !important;
     }
-    
+
     nav.navbar.bootsnav .navbar-collapse.collapse.in {
         display: block !important;
     }
-    
+
     nav.navbar.bootsnav .navbar-nav {
         float: none !important;
         padding-left: 30px;
         padding-right: 30px;
         margin: 0px -15px;
     }
-    
+
     nav.navbar.bootsnav .navbar-nav > li {
         float: none;
         border-top: dotted 1px #aaa;
     }
-    
+
     nav.navbar.bootsnav li.dropdown a.dropdown-toggle:before{
         font-family: 'FontAwesome';
         content: "\f105";
@@ -563,17 +568,17 @@ nav.navbar.bootsnav ul.nav > li > a{
         font-size: 16px;
         margin-left: 10px;
     }
-    
+
     nav.navbar.bootsnav li.dropdown.on > a.dropdown-toggle:before{
         content: "\f107";
     }
-    
+
     nav.navbar.bootsnav .navbar-nav > li > a{
         display: block;
         width: 100%;
         padding: 10px 0;
     }
-    
+
     nav.navbar.bootsnav .navbar-nav > li:first-child{
         border-top: none;
     }
@@ -583,7 +588,7 @@ nav.navbar.bootsnav ul.nav > li > a{
         display: block;
         width: 100%;
     }
-    
+
     nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu{
         width: 100%;
         position: relative !important;
@@ -601,7 +606,7 @@ nav.navbar.bootsnav ul.nav > li > a{
         -o-border-radius: 0px 0px 0px;
         border-radius: 0px 0px 0px;
     }
-    
+
     nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu  > li > a{
         display: block;
         width: 100%;
@@ -609,12 +614,12 @@ nav.navbar.bootsnav ul.nav > li > a{
         padding: 10px 0;
         color: #6f6f6f;
     }
-    
+
     nav.navbar.bootsnav ul.nav ul.dropdown-menu li a:hover,
     nav.navbar.bootsnav ul.nav ul.dropdown-menu li a:focus{
         background-color: transparent;
     }
-    
+
     nav.navbar.bootsnav ul.nav ul.dropdown-menu ul.dropdown-menu{
         float: none !important;
         left: 0;
@@ -623,16 +628,16 @@ nav.navbar.bootsnav ul.nav > li > a{
         background: transparent;
         width: 100%;
     }
-    
+
     nav.navbar.bootsnav ul.nav ul.dropdown-menu li.dropdown.on > ul.dropdown-menu{
         display: inline-block;
         margin-top: -10px;
     }
-    
+
     nav.navbar.bootsnav li.dropdown ul.dropdown-menu li.dropdown > a.dropdown-toggle:after{
         display: none;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu .title{
         padding: 10px 15px 10px 0;
         line-height: 24px;
@@ -644,14 +649,14 @@ nav.navbar.bootsnav ul.nav > li > a{
         border-bottom: solid 1px #e0e0e0;
         color: #6f6f6f;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu ul > li > a{
         display: block;
         width: 100%;
         border-bottom: solid 1px #e0e0e0;
         padding: 8px 0;
     }
-    
+
    nav.navbar.bootsnav .dropdown .megamenu-content .col-menu .title:before{
         font-family: 'FontAwesome';
         content: "\f105";
@@ -661,53 +666,53 @@ nav.navbar.bootsnav ul.nav > li > a{
        position: relative;
        right: -15px;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu:last-child .title{
         border-bottom: none;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu.on:last-child .title{
         border-bottom: solid 1px #e0e0e0;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu:last-child ul.menu-col li:last-child a{
         border-bottom: none;
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu.on .title:before{
         content: "\f107";
     }
-    
+
     nav.navbar.bootsnav .dropdown .megamenu-content .col-menu .content{
         padding: 0 0 0 15px;
     }
-    
+
     nav.bootsnav.brand-center .navbar-collapse{
         display: block;
     }
-    
+
     nav.bootsnav.brand-center ul.nav{
         margin-bottom: 0px !important;
     }
-    
+
     nav.bootsnav.brand-center .navbar-collapse .col-half{
         width: 100%;
         float: none;
         display: block;
     }
-    
+
     nav.bootsnav.brand-center .navbar-collapse .col-half.left{
         margin-bottom: 0;
     }
-    
+
     nav.bootsnav .megamenu-content{
         padding: 0;
     }
-    
+
     nav.bootsnav .megamenu-content .col-menu{
         padding-bottom: 0;
     }
-    
+
     nav.bootsnav .megamenu-content .title{
         cursor: pointer;
         display: block;
@@ -715,29 +720,29 @@ nav.navbar.bootsnav ul.nav > li > a{
         margin-bottom: 0;
         font-weight: normal;
     }
-    
+
     nav.bootsnav .megamenu-content .content{
         display: none;
     }
-    
+
     .attr-nav{
         position: absolute;
         right: 60px;
     }
-    
+
     .attr-nav > ul{
         padding: 0;
         margin: 0 -15px -7px 0;
     }
-    
+
     .attr-nav > ul > li > a{
         padding: 16px 15px 15px;
     }
-    
+
     .attr-nav > ul > li.dropdown > a.dropdown-toggle:before{
         display: none;
     }
-    
+
     .attr-nav > ul > li.dropdown ul.dropdown-menu{
         margin-top: 2px;
         margin-left: 55px;
@@ -745,58 +750,58 @@ nav.navbar.bootsnav ul.nav > li > a{
         left: -250px;
         border-top: solid 5px;
     }
-    
+
     .top-search .container{
         padding: 0 45px;
     }
-    
+
     /* Navbar full Responsive
-    =================================*/   
+    =================================*/
     nav.bootsnav.navbar-full ul.nav{
         margin-left: 0;
     }
-    
+
     nav.bootsnav.navbar-full ul.nav > li > a{
         border: none;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-brand    {
         float: left !important;
         padding-left: 0;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-toggle {
         display: inline-block;
         float: right;
         margin-right: 0;
         margin-top: 10px;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-header {
         padding-left: 15px;
         padding-right: 15px;
     }
-    
+
     /* Navbar Sidebar
-    =================================*/ 
+    =================================*/
     nav.navbar.bootsnav.navbar-sidebar .share{
         padding: 30px 15px;
         margin-bottom: 0;
     }
-    
+
     /* Tabs
-    =================================*/ 
+    =================================*/
     nav.navbar.bootsnav .megamenu-content.tabbed{
         padding-left: 0 !mportant;
     }
-    
+
     nav.navbar.bootsnav .tabbed > li{
         padding: 25px 0;
         margin-left: -15px !important;
     }
-    
+
     /* Mobile Navigation
-    =================================*/     
+    =================================*/
     body > .wrapper{
         -webkit-transition: all 0.3s ease-in-out;
         -moz-transition: all 0.3s ease-in-out;
@@ -804,12 +809,12 @@ nav.navbar.bootsnav ul.nav > li > a{
         -ms-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
     }
-    
+
     body.side-right > .wrapper{
         margin-left: 280px;
         margin-right: -280px !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile .navbar-collapse{
         position: fixed;
         overflow-y: auto !important;
@@ -828,42 +833,42 @@ nav.navbar.bootsnav ul.nav > li > a{
         -ms-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile .navbar-collapse.in{
         left: 0;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav{
         width: 293px;
         padding-right: 0;
         padding-left: 15px;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav > li > a{
         padding: 15px 15px;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav ul.dropdown-menu > li > a{
         padding-right: 15px !important;
         padding-top: 15px !important;
         padding-bottom: 15px !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav ul.dropdown-menu .col-menu .title{
         padding-right: 30px !important;
         padding-top: 13px !important;
         padding-bottom: 13px !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav ul.dropdown-menu .col-menu ul.menu-col li a{
         padding-top: 13px !important;
         padding-bottom: 13px !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile .navbar-collapse [class*=' col-'] {
         width: 100%;
     }
-    
+
     nav.navbar.bootsnav.navbar-fixed .logo-scrolled{
         display: block !important;
     }
@@ -871,7 +876,7 @@ nav.navbar.bootsnav ul.nav > li > a{
     nav.navbar.bootsnav.navbar-fixed .logo-display{
         display: none !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile .tab-menu,
     nav.navbar.bootsnav.navbar-mobile .tab-content{
         width: 100%;
@@ -884,88 +889,88 @@ nav.navbar.bootsnav ul.nav > li > a{
         padding-left: 15px;
         padding-right: 15px;
     }
-    
+
     nav.navbar.bootsnav .navbar-nav {
         padding-left: 15px;
         padding-right: 15px;
     }
-    
+
     .attr-nav{
         right: 30px;
     }
-    
+
     .attr-nav > ul{
         margin-right: -10px;
     }
-    
+
     .attr-nav > ul > li > a{
         padding: 16px 10px 15px;
         padding-left: 0 !important;
     }
-    
+
     .attr-nav > ul > li.dropdown ul.dropdown-menu{
         left: -275px;
     }
-    
+
     .top-search .container{
         padding: 0 15px;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-collapse{
         left: 15px;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-header{
         padding-right: 0;
     }
-    
+
     nav.bootsnav.navbar-full .navbar-toggle {
         margin-right: -15px;
     }
-    
+
     nav.bootsnav.navbar-full ul.nav > li > a{
         font-size: 18px !important;
         line-height: 24px !important;
         padding: 5px 10px !important;
     }
-    
+
     /* Navbar Sidebar
-    =================================*/ 
+    =================================*/
     nav.navbar.bootsnav.navbar-sidebar .share{
         padding: 30px 15px !important;
     }
-    
+
     /* Navbar Sidebar
-    =================================*/ 
+    =================================*/
     nav.navbar.bootsnav.navbar-sidebar .share{
         padding: 30px 0 !important;
         margin-bottom: 0;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile.navbar-sidebar .share{
         padding: 30px 15px !important;
         margin-bottom: 0;
     }
-    
+
     /* Mobile Navigation
-    =================================*/ 
+    =================================*/
     body.side-right > .wrapper{
         margin-left: 280px;
         margin-right: -280px !important;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile .navbar-collapse{
         margin-left: 0;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav{
         margin-left: -15px;
     }
-    
+
     nav.navbar.bootsnav.navbar-mobile ul.nav{
         border-top: solid 1px #fff;
     }
-    
+
     li.close-full-menu{
         padding-top: 15px !important;
         padding-bottom: 15px !important;
