--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -607,7 +607,7 @@ footer {
 footer::before {
     background: rgba(255, 255, 255, 0.33) none repeat scroll 0 0;
     content: "";
-    height: 45px;
+    /* height: 45px; */
     left: 0;
     position: absolute;
     top: 0;
